Fixed some byte order bugs with prepared statements on machines with high-byte-first. (Bug #4173) Fixed problem with NULL and derived tables (Bug #4097) Cleanup of new pushed code